--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <h3 class="benefits-title title">Leading healthcare providers</h3>
                         <p class="benefits-text">Trafalgar provides progressive, and affordable healthcare, accessible
                             on mobile and online for everyone. To us, it’s not just work. We take pride
-                            in the solutions we deliver</p>
+                            in the solutions we deliver...</p>
                         <a href="index.html" class="button services--link">Learn more</a>
                     </div>
                 </li>
