--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
         </section>
         <section class="benefis">
             <div class="container">
+                <ul class="benefis-list">
                 <li class="benefits-item">
-                    <img src="img/benefits-one.png" alt="photo" width="650" height="477">
+                    <img src="img/benefits-one.png" class="benefits-item-img" alt="photo" width="650" height="477">
                     <div class="benefits-item-container">
                         <h3 class="benefits-title title">Leading healthcare providers</h3>
                         <p class="benefits-text">Trafalgar provides progressive, and affordable healthcare, accessible
@@ -109,7 +110,7 @@
                     </div>
                 </li>
                 <li class="benefits-item">
-                    <img src="img/benefits-two.png" alt="photo" height="477">
+                    <img src="img/benefits-two.png" class="benefits-item-img" alt="photo" height="477">
                     <div class="benefist-item-container">
                         <h3 class="benefits-title title">Download our
                             mobile apps</h3>
@@ -119,6 +120,7 @@
                         <a href="index.html" class="button services--link download-link">Download</a>
                 </li>
             </div>
+        </ul>
             </div>
         </section>
         <section>
@@ -197,7 +199,7 @@
   </section>
 </div>
   <footer>
-    <div class="footer-content">
+    <div class="container footer-content">
       <div class="footer-logo">
         <a href="index.html" class="footer-logo-span"><span class="footer-span">T</span>Trafalgar</a>
         <p class="footer-text">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
